--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -114,12 +114,14 @@
     </style>
 </head>
 <body>
+
 <!-- Spinner Start -->
 <div id="spinner"
      class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
     <div class="spinner-grow text-primary" role="status"></div>
 </div>
 <!-- Spinner End -->
+
 <!-- Navbar start -->
 <div class="container-fluid fixed-top bg-bs-dark bg-verde-scuro">
     <div class="container topbar bg-verde-medio d-none d-lg-block">
@@ -141,7 +143,7 @@
                 <div class="navbar-nav mx-auto">
                     <a href="/" class="nav-item nav-link active">Home</a>
                     <a href="#" class="nav-item nav-link">Categorie</a>
-                    <a href="/prodotti" class="nav-item nav-link">Prodotti</a>
+                    <a href="/product" class="nav-item nav-link">Prodotti</a>
                     <a href="/ia" class="nav-item nav-link disabled">SpeSana.IA</a>
                 </div>
                 <div class="d-flex m-3 me-0">
@@ -155,7 +157,7 @@
                         </a>
                         <div class="dropdown-menu m-0 bg-secondary bianco rounded-0">
                             <a href="/login" class="dropdown-item">Login</a>
-                            <a href="#" class="dropdown-item">Il mio profilo</a>
+                            <a href="/profilo" class="dropdown-item">Il mio profilo</a>
                             <a href="#" class="dropdown-item">Preferiti</a>
                             <a href="/logout" class="dropdown-item">Logout</a>
                         </div>
