--- a/test/templates/login.html
+++ b/test/templates/login.html
@@ -160,7 +160,7 @@
                     <h6>Email</h6>
                     <input type="text" name="email_login" class="w-100 form-control border-0 py-1 mb-4" required>
                     <h6>Password</h6>
-                    <input type="text" name="password_login" class="w-100 form-control border-0 py-1 mb-4" required>
+                    <input type="password" name="password_login" class="w-100 form-control border-0 py-1 mb-4" required>
                     <button class="w-100 btn form-control border-secondary bg-white text-primary " type="submit">Login</button>
                 </form>
                 <div class="col p-3">
