--- a/test/templates/signup.html
+++ b/test/templates/signup.html
@@ -269,14 +269,14 @@
 <!--                                          <li class="list-group-item"><label><input type="checkbox" name="frutta" value="pera"> Pera</label></li>-->
 <!--                                        </ul>-->
                                         <ul class="dropdown-menu scrollable-menu" role="menu">
-                                            <li><label><input type="checkbox" name="categoria1" value="cereali e patate">Cereali e patate</label></li>
-                                            <li><label><input type="checkbox" name="categoria2" value="legumi">Legumi</label></li>
-                                            <li><label><input type="checkbox" name="categoria3" value="pera">Pera</label></li>
-                                            <li><label><input type="checkbox" name="categoria4" value="pera">Pera</label></li>
-                                            <li><label><input type="checkbox" name="categoria5" value="pera">Pera</label></li>
-                                            <li><label><input type="checkbox" name="categoria6" value="pera">Pera</label></li>
-                                            <li><label><input type="checkbox" name="categoria7" value="pera">Pera</label></li>
-                                            <li><label><input type="checkbox" name="categoria8" value="pera">Pera</label></li>
+                                            <li><label><input type="checkbox" name="categoria1" value="Cereali e patate">Cereali e patate</label></li>
+                                            <li><label><input type="checkbox" name="categoria2" value="Legumi">Legumi</label></li>
+                                            <li><label><input type="checkbox" name="categoria3" value="Formaggi">Formaggi</label></li>
+                                            <li><label><input type="checkbox" name="categoria4" value="Prodotti A Base Di Carne">Prodotti A Base Di Carne</label></li>
+                                            <li><label><input type="checkbox" name="categoria5" value="Cibi A Base Di Frutta E Verdura">Cibi A Base Di Frutta E Verdura</label></li>
+                                            <li><label><input type="checkbox" name="categoria6" value="Latticini">Latticini</label></li>
+                                            <li><label><input type="checkbox" name="categoria7" value="Biscotti">Biscotti</label></li>
+                                            <li><label><input type="checkbox" name="categoria8" value="Cibi E Bevande A Base Vegetale">Cibi E Bevande A Base Vegetale</label></li>
                                         </ul>
                                     </div>
                                 </div>
