--- a/test/templates/product-detail.html
+++ b/test/templates/product-detail.html
@@ -157,11 +157,63 @@
 
 <body>
 
-<!-- Navbar start -->
+{% if flagLog == False %}
+    <!-- Navbar start senza essere loggati -->
+    <div class="container-fluid fixed-top bg-bs-dark bg-verde-scuro">
+        <div class="container topbar bg-verde-medio d-none d-lg-block">
+            <div class="d-flex justify-content-center">
+                <h5 class="text-light">Siamo un marchio che ispira e guida le persone verso scelte alimentari migliori!
+                    🌱🍎🥦</h5>
+            </div>
+        </div>
+
+        <div class="container px-0">
+            <nav class="navbar navbar-light bg-verde-scuro navbar-expand-xl">
+                <a href="#" class="navbar-brand"><h1 class="bianco display-6">SpeSana</h1></a>
+                <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarCollapse">
+                    <span class="fa fa-bars text-primary"></span>
+                </button>
+                <div class="collapse navbar-collapse bg-verde-scuro" id="navbarCollapse">
+                    <div class="navbar-nav mx-auto">
+                        <a href="/" class="nav-item nav-link active">Home</a>
+                        <a href="/product" class="nav-item nav-link">Prodotti</a>
+                        <a href="/ia" class="nav-item nav-link">SpeSana.IA</a>
+                        <a href="/nutriscore" class="nav-item nav-link">Nutriscore</a>
+                    </div>
+                    <div class="d-flex m-3 me-0">
+                        <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4"
+                                data-bs-toggle="modal" data-bs-target="#searchModal"><i
+                                class="fas fa-search verde-scuro"></i></button>
+                        <div class="nav-item dropdown">
+                            <a type="button" class="btn bg-verde-chiaro bianco dropdown-toggle" data-bs-toggle="dropdown"
+                               data-bs-display="static" aria-expanded="false">
+                                <i class="fas fa-user bianco fa-2x"></i>
+                            </a>
+                            <div class="dropdown-menu m-0 bg-secondary bianco rounded-0">
+                                <a href="/login" class="dropdown-item">Login</a>
+                                <a href="/signup" class="dropdown-item">Registrati</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </div>
+    <!-- Navbar End -->
+{% else %}
+
+<!-- Navbar start login -->
 <div class="container-fluid fixed-top bg-bs-dark bg-verde-scuro">
+    <div class="container topbar bg-verde-medio d-none d-lg-block">
+        <div class="d-flex justify-content-center">
+            <h5 class="text-light">Siamo un marchio che ispira e guida le persone verso scelte alimentari migliori!
+                🌱🍎🥦</h5>
+        </div>
+    </div>
+
     <div class="container px-0">
         <nav class="navbar navbar-light bg-verde-scuro navbar-expand-xl">
-<!--            <img src="/static/imgTest/Carrello.jpg" width="50" height="50">-->
             <a href="#" class="navbar-brand"><h1 class="bianco display-6">SpeSana</h1></a>
             <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -170,10 +222,11 @@
             <div class="collapse navbar-collapse bg-verde-scuro" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
                     <a href="/" class="nav-item nav-link active">Home</a>
-                    <a href="#" class="nav-item nav-link">Categorie</a>
                     <a href="/product" class="nav-item nav-link">Prodotti</a>
-                    <a href="/ia" class="nav-item nav-link disabled">SpeSana.IA</a>
+                    <a href="/ia" class="nav-item nav-link">SpeSana.IA</a>
+                    <a href="/nutriscore" class="nav-item nav-link">Nutriscore</a>
                 </div>
+                <div class="bianco">Ciao {{ utente.Name }} {{ utente.Surname }}</div>
                 <div class="d-flex m-3 me-0">
                     <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4"
                             data-bs-toggle="modal" data-bs-target="#searchModal"><i
@@ -184,9 +237,7 @@
                             <i class="fas fa-user bianco fa-2x"></i>
                         </a>
                         <div class="dropdown-menu m-0 bg-secondary bianco rounded-0">
-                            <a href="/login" class="dropdown-item">Login</a>
-                            <a href="#" class="dropdown-item">Il mio profilo</a>
-                            <a href="#" class="dropdown-item">Preferiti</a>
+                            <a href="/profilo" class="dropdown-item">Il mio profilo</a>
                             <a href="/logout" class="dropdown-item">Logout</a>
                         </div>
                     </div>
@@ -196,6 +247,7 @@
     </div>
 </div>
 <!-- Navbar End -->
+{% endif %}
 
 
 <!-- Single Page Header start -->
