--- a/test/templates/profilo.html
+++ b/test/templates/profilo.html
@@ -124,7 +124,53 @@
 </div>
 <!-- Spinner End -->
 
-<!-- Navbar start -->
+{% if flagLog == False %}
+    <!-- Navbar start senza essere loggati -->
+    <div class="container-fluid fixed-top bg-bs-dark bg-verde-scuro">
+        <div class="container topbar bg-verde-medio d-none d-lg-block">
+            <div class="d-flex justify-content-center">
+                <h5 class="text-light">Siamo un marchio che ispira e guida le persone verso scelte alimentari migliori!
+                    🌱🍎🥦</h5>
+            </div>
+        </div>
+
+        <div class="container px-0">
+            <nav class="navbar navbar-light bg-verde-scuro navbar-expand-xl">
+                <a href="#" class="navbar-brand"><h1 class="bianco display-6">SpeSana</h1></a>
+                <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarCollapse">
+                    <span class="fa fa-bars text-primary"></span>
+                </button>
+                <div class="collapse navbar-collapse bg-verde-scuro" id="navbarCollapse">
+                    <div class="navbar-nav mx-auto">
+                        <a href="/" class="nav-item nav-link active">Home</a>
+                        <a href="/product" class="nav-item nav-link">Prodotti</a>
+                        <a href="/ia" class="nav-item nav-link">SpeSana.IA</a>
+                        <a href="/nutriscore" class="nav-item nav-link">Nutriscore</a>
+                    </div>
+                    <div class="d-flex m-3 me-0">
+                        <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4"
+                                data-bs-toggle="modal" data-bs-target="#searchModal"><i
+                                class="fas fa-search verde-scuro"></i></button>
+                        <div class="nav-item dropdown">
+                            <a type="button" class="btn bg-verde-chiaro bianco dropdown-toggle" data-bs-toggle="dropdown"
+                               data-bs-display="static" aria-expanded="false">
+                                <i class="fas fa-user bianco fa-2x"></i>
+                            </a>
+                            <div class="dropdown-menu m-0 bg-secondary bianco rounded-0">
+                                <a href="/login" class="dropdown-item">Login</a>
+                                <a href="/signup" class="dropdown-item">Registrati</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </div>
+    <!-- Navbar End -->
+{% else %}
+
+<!-- Navbar start login -->
 <div class="container-fluid fixed-top bg-bs-dark bg-verde-scuro">
     <div class="container topbar bg-verde-medio d-none d-lg-block">
         <div class="d-flex justify-content-center">
@@ -135,7 +181,6 @@
 
     <div class="container px-0">
         <nav class="navbar navbar-light bg-verde-scuro navbar-expand-xl">
-            <!--            <img src="/static/imgTest/Carrello.jpg" width="50" height="50">-->
             <a href="#" class="navbar-brand"><h1 class="bianco display-6">SpeSana</h1></a>
             <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -144,10 +189,11 @@
             <div class="collapse navbar-collapse bg-verde-scuro" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
                     <a href="/" class="nav-item nav-link active">Home</a>
-                    <a href="#" class="nav-item nav-link">Categorie</a>
                     <a href="/product" class="nav-item nav-link">Prodotti</a>
-                    <a href="/ia" class="nav-item nav-link disabled">SpeSana.IA</a>
+                    <a href="/ia" class="nav-item nav-link">SpeSana.IA</a>
+                    <a href="/nutriscore" class="nav-item nav-link">Nutriscore</a>
                 </div>
+                <div class="bianco">Ciao {{ utente.Name }} {{ utente.Surname }}</div>
                 <div class="d-flex m-3 me-0">
                     <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4"
                             data-bs-toggle="modal" data-bs-target="#searchModal"><i
@@ -158,9 +204,7 @@
                             <i class="fas fa-user bianco fa-2x"></i>
                         </a>
                         <div class="dropdown-menu m-0 bg-secondary bianco rounded-0">
-                            <a href="/login" class="dropdown-item">Login</a>
                             <a href="/profilo" class="dropdown-item">Il mio profilo</a>
-                            <a href="#" class="dropdown-item">Preferiti</a>
                             <a href="/logout" class="dropdown-item">Logout</a>
                         </div>
                     </div>
@@ -170,6 +214,7 @@
     </div>
 </div>
 <!-- Navbar End -->
+{% endif %}
 
 <!-- Modal Search Start -->
 <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -223,31 +268,40 @@
                                 <div class="col-md-12 col-lg-6">
                                     <div class="form-item w-100">
                                         <label class="form-label my-3">Nome<sup>*</sup></label>
-                                        <input type="text" class="form-control">
+                                        <input type="text" class="form-control" value="{{utente.Name}}">
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-6">
                                     <div class="form-item w-100">
                                         <label class="form-label my-3">Cognome<sup>*</sup></label>
-                                        <input type="text" class="form-control">
+                                        <input type="text" class="form-control" value="{{utente.Surname}}">
                                     </div>
                                 </div>
                             </div>
                             <div class="form-item">
                                 <label class="form-label my-3">Email<sup>*</sup></label>
-                                <input type="text" class="form-control">
+                                <input type="text" class="form-control" value="{{utente.Email}}">
                             </div>
                             <div class="row">
                                 <div class="col-md-12 col-lg-6">
                                     <div class="form-item w-100">
                                         <label class="form-label my-3">Sesso<sup>*</sup></label>
-                                        <input type="text" class="form-control">
+                                        <select class="form-select" style="border: 1px solid #ced4da">
+                                            <option>{{utente.Gender}}</option>
+                                            <option {% if utente.Gender == 'M' %} hidden {% endif %}> M</option>
+                                            <option {% if utente.Gender == 'F' %} hidden {% endif %}> F</option>
+                                        </select>
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-6">
                                     <div class="form-item w-100">
                                         <label class="form-label my-3">Età<sup>*</sup></label>
-                                        <input type="text" class="form-control">
+                                        <select class="form-select" style="border: 1px solid #ced4da">
+                                            <option>{{utente.Age}}</option>
+                                            {% for i in range(18,61) %}
+                                            <option> {{i}}</option>
+                                            {% endfor %}
+                                        </select>
                                     </div>
                                 </div>
                             </div>
@@ -255,27 +309,53 @@
                                 <div class="col-md-12 col-lg-6">
                                     <div class="form-item w-100">
                                         <label class="form-label my-3">Peso (kg)<sup>*</sup></label>
-                                        <input type="text" class="form-control">
+                                        <input type="text" class="form-control" value="{{utente.Height}}">
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-6">
                                     <div class="form-item w-100">
                                         <label class="form-label my-3">Altezza (cm)<sup>*</sup></label>
-                                        <input type="text" class="form-control">
+                                        <input type="text" class="form-control" value="{{utente.Weight}}">
                                     </div>
                                 </div>
                             </div>
                             <div class="form-item">
                                 <label class="form-label my-3">Obiettivo<sup>*</sup></label>
-                                <input type="text" class="form-control">
+                                <select class="form-select" style="border: 1px solid #ced4da">
+                                    <option>{{utente.Goal}}</option>
+                                    <option {% if utente.Goal == 'Dimagrire' %} hidden {% endif %}> Dimagrire </option>
+                                    <option {% if utente.Goal == 'Mantenersi in forma' %} hidden {% endif %}> Mantenersi in forma </option>
+                                    <option {% if utente.Goal == 'Aumentare la massa muscolare' %} hidden {% endif %}> Aumentare la massa muscolare </option>
+                                </select>
                             </div>
                             <div class="form-item">
                                 <label class="form-label my-3">Livello di attività<sup>*</sup></label>
-                                <input type="text" class="form-control">
+                                <select class="form-select" style="border: 1px solid #ced4da">
+                                    <option>{{utente.activity_level}}</option>
+                                    <option {% if utente.activity_level == 'Sedentario' %} hidden {% endif %}> Sedentario </option>
+                                    <option {% if utente.activity_level == 'Leggermente attivo' %} hidden {% endif %}> Leggermente attivo </option>
+                                    <option {% if utente.activity_level == 'Moderatamente attivo' %} hidden {% endif %}> Moderatamente attivo </option>
+                                    <option {% if utente.activity_level == 'Molto Attivo' %} hidden {% endif %}> Molto Attivo </option>
+                                </select>
                             </div>
-                            <div class="form-item">
-                                <label class="form-label my-3">Preferiti<sup>*</sup></label>
-                                <input type="text" class="form-control">
+                            <br>
+                            <div class="accordion" id="accordionCategorie">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                                        Categorie preferite
+                                      </button>
+                                    </h2>
+                                    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionCategorie">
+                                      <div class="accordion-body">
+                                          <ul class="list-group">
+                                              {% for elem in categorie %}
+                                                <li class="list-group-item"><label><input type="checkbox" name="categoria1" value="{{elem}}" {% if elem in utente.Favorites %} checked {% endif %}>{{elem}}</label></li>
+                                              {% endfor %}
+                                        </ul>
+                                      </div>
+                                    </div>
+                                </div>
                             </div>
                             <hr>
                             <div class="row g-4 text-center align-items-center justify-content-center pt-4">
@@ -300,6 +380,7 @@
                                               </div>
                                             </div>
                                         </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row g-4 text-center align-items-center justify-content-center border-bottom py-3">
