--- a/test/templates/product-detail.html
+++ b/test/templates/product-detail.html
@@ -287,13 +287,13 @@
                                     <div class="p-1">
                                         <form method="post" id="f_ricetta">
                                         <button class="btn btn-secondary border-secondary rounded-pill px-3 text-light mx-1 my-2" id="ricetta_p" type="submit" data-bs-toggle="modal" name="ricetta_p" data-bs-target="#chatModal"
-                                                value="ID user, {{prodotto.code}}, ricetta">Ricetta per te<i class="bi bi-stars me-2"></i></button>
+                                                {% if flagLog %} value="{{ utente.Email }}, {{prodotto.code}}, ricetta" {% else %} onclick="Gologin()" {% endif %}>Ricetta per te<i class="bi bi-stars me-2"></i></button>
                                         </form>
                                     </div>
                                     <div class="p-1">
                                         <form method="post" id="f_info">
                                         <button class="btn btn-secondary border-secondary rounded-pill px-3 text-light mx-1 my-2" id="info_p" type="submit" data-bs-toggle="modal" name="info_p" data-bs-target="#chatModal"
-                                                value="ID user, {{prodotto.code}}, info">info<i class="bi bi-stars me-2"></i></button>
+                                                {% if flagLog %} value="{{ utente.Email }}, {{prodotto.code}}, info" {% else %} onclick="Gologin()" {% endif %}>info<i class="bi bi-stars me-2"></i></button>
                                         </form>
                                     </div>
                                 </div>
@@ -519,6 +519,12 @@
 
 <!-- Template Javascript -->
 <link rel="stylesheet" href="{{ url_for('static', filename='js/main.js') }}">
+
+<script>
+      function Gologin() {
+        window.location.href="/login";
+      }
+    </script>
 </body>
 
 </html>
