--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -288,7 +288,7 @@
                     <div class="relative">
                         <label title="Carica codice" for="code_hero" class="cursor-pointer flex items-center">
                             <div class="w-max relative btn btn-primary border-2 border-secondary px-3 position-absolute rounded-pill text-white"
-                                 style="top: 29.5%; right: 90.4%; padding-top: 0.6rem !important; padding-bottom: 0.6rem !important;">
+                                 style="top: 29.5%; left:0%; padding-top: 0.6rem !important; padding-bottom: 0.6rem !important;">
                                 <i class="bi bi-upc-scan code-btn"></i>
                             </div>
                         </label>
