--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -505,17 +505,15 @@
             <div class="col-lg-6 col-xl-4">
                 <div class="p-4 rounded bg-light">
                     <div class="row align-items-center">
-                        <div class="col-6">
+                        <div class="col-6 fruite-item">
                             <a href="product/{{elem.code}}">
-                                <img src="{{elem.image_url}}" class="img-best rounded-top"
+                                <img src="{{elem.image_url}}" class="img-best img-fluid rounded-top"
                                      alt="">
                             </a>
                         </div>
                         <div class="col-6">
                             <a href="product/{{elem.code}}" class="h5">{{elem.product_name}}</a>
                             <h6 class="mb-3">{{elem.brands}}</h6>
-<!--                            <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i-->
-<!--                                    class="fa fa-heart me-2 text-primary"></i></a>-->
                             <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">
                                 <i class="fa fa-heart me-2 text-secondary"></i>
                             </a>
@@ -539,7 +537,6 @@
                                                     class="bi bi-stars me-2"></i></button>
                                         </form>
                                     </div>
-
                         </div>
                     </div>
                 </div>
@@ -568,7 +565,7 @@
                     <span class="h2 text-white">scopri i segreti degli alimenti.</span>
                     <p class="mb-4 mt-2 verde-scuro">Alimenti analizzati, ricette personalizzate: benvenuti in
                         SpeSana.IA!</p>
-                    <a href="/LOGIN" class="banner-btn btn border-2 rounded-pill bg-verde-scuro text-white py-3 px-5">PROVALA
+                    <a href="/login" class="banner-btn btn border-2 rounded-pill bg-verde-scuro text-white py-3 px-5">PROVALA
                         ORA<i class="bi bi-stars me-2"></i></a>
                     {% endif %}
                 </div>
@@ -594,159 +591,83 @@
                 <div class="col-lg-8 text-end">
                     <ul class="nav nav-pills d-inline-flex text-center mb-5">
                         <li class="nav-item">
-                            <a class="d-flex m-2 py-2 bg-light rounded-pill active" data-bs-toggle="pill" href="#tab-6">
-                                <span class="text-dark" style="width: 130px;">Cioccolato</span>
+                            <a class="d-flex m-2 py-2 bg-light rounded-pill active" data-bs-toggle="pill" href="#tab2-1">
+                                <span class="text-dark" style="width: 130px;">Carne</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="d-flex py-2 m-2 bg-light rounded-pill" data-bs-toggle="pill" href="#tab-7">
-                                <span class="text-dark" style="width: 130px;">Formaggio</span>
+                            <a class="d-flex py-2 m-2 bg-light rounded-pill" data-bs-toggle="pill" href="#tab2-2">
+                                <span class="text-dark" style="width: 130px;">Frutta e Verdura</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="d-flex m-2 py-2 bg-light rounded-pill" data-bs-toggle="pill" href="#tab-8">
-                                <span class="text-dark" style="width: 130px;">Salumi</span>
+                            <a class="d-flex m-2 py-2 bg-light rounded-pill" data-bs-toggle="pill" href="#tab2-3">
+                                <span class="text-dark" style="width: 130px;">Latticini</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="d-flex m-2 py-2 bg-light rounded-pill" data-bs-toggle="pill" href="#tab-9">
-                                <span class="text-dark" style="width: 130px;">Pane</span>
+                            <a class="d-flex m-2 py-2 bg-light rounded-pill" data-bs-toggle="pill" href="#tab2-4">
+                                <span class="text-dark" style="width: 130px;">Snack Dolci</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <!--     LINK CATEGORIES       -->
-                            <a class="d-flex m-2 py-2 bg-verde-scuro rounded-pill" href="/categories">
-                                <span class="text-light" style="width: 130px;">See all</span>
+                            <a class="d-flex m-2 py-2 bg-verde-scuro rounded-pill" href="/product">
+                                <span class="text-light" style="width: 130px;">Prodotti</span>
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="tab-content">
-                <div id="tab-6" class="tab-pane fade show p-0 active">
-                    <div class="row g-4">
-                        <div class="col-lg-12">
-                            <div class="row g-4">
-                                <div class="col-md-6 col-lg-4 col-xl-3">
-                                    <div class="rounded position-relative fruite-item">
-                                        <div class="fruite-img">
-                                            <img src="static/imgTest/img-not-found.jpg"
-                                                 class="img-fluid w-100 rounded-top" alt="">
-                                        </div>
-                                        <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                                             style="top: 10px; left: 10px;">Fruits
-                                        </div>
-                                        <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                                            <h4>Grapes</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te
-                                                incididunt</p>
-                                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                                <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
-                                                <a href="#"
-                                                   class="btn border border-secondary rounded-pill px-3 text-primary"><i
-                                                        class="fa fa-shopping-bag me-2 text-primary"></i> Add to
-                                                    cart</a>
-                                            </div>
-                                        </div>
+                {% for score in categorie %}
+                <div id="tab2-{{loop.index}}" class="tab-pane fade show p-0 {% if loop.index == 1 %} active {% endif %}">
+                    <div class="row g-4 mx-auto">
+                        {% for elem in score[:4] %}
+                        <div class="col-md-6 col-lg-4 col-xl-3">
+                            <div class="rounded position-relative fruite-item d-flex flex-column">
+                                <a href="/product/{{elem.code}}">
+                                    <div class="fruite-img border border-secondary">
+                                        <img src="{{elem.image_url}}"
+                                             class="img-fluid rounded-top" alt="">
+                                    </div>
+                                </a>
+                                <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
+                                     style="top: 10px; left: 10px;">{{elem.nutriscore_grade.upper()}}
+                                </div>
+                                <div class="p-2 border border-secondary border-top-0 rounded-bottom d-flex flex-column align-items-center h-300">
+                                    <a class="h6 maxText" href="/product/{{elem.code}}">{{elem.product_name}}</a>
+                                    <div class="d-flex justify-content-between flex-lg-wrap">
+                                        <a href="#"
+                                           class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">
+                                            <i class="fa fa-heart me-2 text-secondary"></i>
+                                        </a>
+                                        <form method="post" class="ia_form">
+                                            <button class="ia-btn btn btn-secondary border-secondary rounded-pill px-3 text-light mx-1 my-2"
+                                                    type="submit" data-bs-toggle="modal" name="prompt"
+                                                    data-bs-target="#chatModal"
+                                                    {% if flagLog %} value="{{ utente.Email }}, {{elem.code}}, ricetta"
+                                                    {% else %} onclick="Gologin()" {% endif %}><i
+                                                    class="fas fa-drumstick-bite"></i><i
+                                                    class="bi bi-stars me-2"></i></button>
+                                        </form>
+                                        <form method="post" class="ia_form">
+                                            <button class="ia-btn btn btn-secondary border-secondary rounded-pill px-3 text-light mx-1 my-2"
+                                                    type="submit" data-bs-toggle="modal" name="prompt"
+                                                    data-bs-target="#chatModal"
+                                                    {% if flagLog %} value="{{ utente.Email }}, {{elem.code}}, info" {%
+                                                    else %} onclick="Gologin()" {% endif %}><i
+                                                    class="bi bi-info-circle"></i><i
+                                                    class="bi bi-stars me-2"></i></button>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        {% endfor %}
                     </div>
                 </div>
-                <div id="tab-7" class="tab-pane fade show p-0">
-                    <div class="row g-4">
-                        <div class="col-lg-12">
-                            <div class="row g-4">
-                                <div class="col-md-6 col-lg-4 col-xl-3">
-                                    <div class="rounded position-relative fruite-item">
-                                        <div class="fruite-img">
-                                            <img src="static/imgTest/img-not-found.jpg"
-                                                 class="img-fluid w-100 rounded-top" alt="">
-                                        </div>
-                                        <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                                             style="top: 10px; left: 10px;">Fruits
-                                        </div>
-                                        <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                                            <h4>Grapes</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te
-                                                incididunt</p>
-                                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                                <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
-                                                <a href="#"
-                                                   class="btn border border-secondary rounded-pill px-3 text-primary"><i
-                                                        class="fa fa-shopping-bag me-2 text-primary"></i> Add to
-                                                    cart</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="tab-8" class="tab-pane fade show p-0">
-                    <div class="row g-4">
-                        <div class="col-lg-12">
-                            <div class="row g-4">
-                                <div class="col-md-6 col-lg-4 col-xl-3">
-                                    <div class="rounded position-relative fruite-item">
-                                        <div class="fruite-img">
-                                            <img src="static/imgTest/img-not-found.jpg"
-                                                 class="img-fluid w-100 rounded-top" alt="">
-                                        </div>
-                                        <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                                             style="top: 10px; left: 10px;">Fruits
-                                        </div>
-                                        <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                                            <h4>Oranges</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te
-                                                incididunt</p>
-                                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                                <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
-                                                <a href="#"
-                                                   class="btn border border-secondary rounded-pill px-3 text-primary"><i
-                                                        class="fa fa-shopping-bag me-2 text-primary"></i> Add to
-                                                    cart</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="tab-9" class="tab-pane fade show p-0">
-                    <div class="row g-4">
-                        <div class="col-lg-12">
-                            <div class="row g-4">
-                                <div class="col-md-6 col-lg-4 col-xl-3">
-                                    <div class="rounded position-relative fruite-item">
-                                        <div class="fruite-img">
-                                            <img src="static/imgTest/img-not-found.jpg"
-                                                 class="img-fluid w-100 rounded-top" alt="">
-                                        </div>
-                                        <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                                             style="top: 10px; left: 10px;">Fruits
-                                        </div>
-                                        <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                                            <h4>Grapes</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te
-                                                incididunt</p>
-                                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                                <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
-                                                <a href="#"
-                                                   class="btn border border-secondary rounded-pill px-3 text-primary"><i
-                                                        class="fa fa-shopping-bag me-2 text-primary"></i> Add to
-                                                    cart</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
