--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -505,9 +505,9 @@
             <div class="col-lg-6 col-xl-4">
                 <div class="p-4 rounded bg-light">
                     <div class="row align-items-center">
-                        <div class="col-6 fruite-item">
+                        <div class="col-6">
                             <a href="product/{{elem.code}}">
-                                <img src="{{elem.image_url}}" class="img-best img-fluid rounded-top"
+                                <img src="{{elem.image_url}}" class="img-best rounded-top"
                                      alt="">
                             </a>
                         </div>
