--- a/test/templates/signup.html
+++ b/test/templates/signup.html
@@ -208,7 +208,7 @@
         <div class="container-fluid contact py-1">
             <div class="container py-5">
                 <div class="p-5 bg-light rounded">
-                    <form action="/submit" method="POST">
+                    <form action="/signup" method="POST">
                         <div class="d-flex row g-4">
                             <div class="col-lg-4" style="border-right: 2px solid #014017">
                                 <h6 class="verde-scuro">Informazioni generali:</h6>
