--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -597,7 +597,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="d-flex py-2 m-2 bg-light rounded-pill" data-bs-toggle="pill" href="#tab2-2">
-                                <span class="text-dark" style="width: 130px;">Frutta e Verdura</span>
+                                <span class="text-dark" style="width: 130px;">Bevande</span>
                             </a>
                         </li>
                         <li class="nav-item">
