--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -503,7 +503,7 @@
         <div class="row g-4">
             {% for elem in best %}
             <div class="col-lg-6 col-xl-4">
-                <div class="p-4 rounded bg-light">
+                <div class="rounded bg-light" style="margin-bottom: 100px">
                     <div class="row align-items-center">
                         <div class="col-6">
                             <a href="product/{{elem.code}}">
