--- a/test/templates/product-detail.html
+++ b/test/templates/product-detail.html
@@ -405,7 +405,7 @@
                                 <div class="mb-4">
                                     <h4>Categorie</h4>
                                     <ul class="list-unstyled fruite-categorie">
-                                        {% if len(prodotto.categories) > 0 %}
+                                        {% if prodotto.categories is iterable %}
                                         {% for elem in prodotto.categories[:5] %}
                                         <li>
                                             <div class="d-flex justify-content-between fruite-name">
