--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -169,7 +169,7 @@
 
     <div class="container px-0">
         <nav class="navbar navbar-light bg-verde-scuro navbar-expand-xl">
-            <a href="#" class="navbar-brand"><h1 class="bianco display-6">SpeSana</h1></a>
+            <a href="/" class="navbar-brand"><h1 class="bianco display-6">SpeSana</h1></a>
             <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars text-primary"></span>
@@ -213,7 +213,7 @@
 
     <div class="container px-0">
         <nav class="navbar navbar-light bg-verde-scuro navbar-expand-xl">
-            <a href="#" class="navbar-brand"><h1 class="bianco display-6">SpeSana</h1></a>
+            <a href="/" class="navbar-brand"><h1 class="bianco display-6">SpeSana</h1></a>
             <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars text-primary"></span>
