--- a/test/templates/nutriscore.html
+++ b/test/templates/nutriscore.html
@@ -255,7 +255,7 @@
 
 <!-- Single Page Header start -->
 <div class="container-fluid page-header py-5">
-    <h1 class="text-center text-white display-6">Prodotti</h1>
+    <h1 class="text-center text-white display-6">Nutriscore</h1>
     <ol class="breadcrumb justify-content-center mb-0">
         <li class="breadcrumb-item"><a href="/">Home</a></li>
         <li class="breadcrumb-item active text-white">Nutriscore</li>
