--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -97,6 +97,7 @@
         $(document).ready(function() {
             $('.fav-btn').on('click', function(event) {
                 event.preventDefault();
+                var buttonFav = $(this)
                 var buttonVal = $(this).val();
 
             var csrftoken = Cookies.get('csrftoken');
@@ -110,8 +111,14 @@
             $.ajax({
                 url: '/',
                 type: 'POST',
-                data: {prompt: prompt},
+                data: {fav: favProd},
                 dataType: 'json',
+                success: function(data) {
+
+                buttonFav.addClass('btn-secondary');
+                $('#response').append('<p id="GFG2">Spesana.IA<i class="bi bi-stars"></i>: ' + data.response + '</p>');
+                $('#response #GFG2').css({"color": "green"});
+                    }
                 });
             });
         });
@@ -426,10 +433,12 @@
                                 <div class="p-2 border border-secondary border-top-0 rounded-bottom d-flex flex-column align-items-center h-300">
                                     <a class="h6 maxText" href="/product/{{elem.code}}">{{elem.product_name}}</a>
                                     <div class="d-flex justify-content-between flex-lg-wrap">
-                                        <a href="#"
-                                           class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">
+                                        <form method="post">
+                                        <button class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2" name="fav"
+                                        {% if flagLog %} value="{{ utente.Email }}, {{elem.code}}" {% else %} onclick="Gologin()" {% endif %}>
                                             <i class="fa fa-heart me-2 text-secondary"></i>
-                                        </a>
+                                        </button>
+                                            </form>
                                         <form method="post" class="ia_form">
                                             <button class="ia-btn btn btn-secondary border-secondary rounded-pill px-3 text-light mx-1 my-2"
                                                     type="submit" data-bs-toggle="modal" name="prompt"
